[package]
name = "test-json-rpc"
version = "0.1.0"
authors = ["David James McCorrie <djmccorrie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "15.0"
serde = { version = "1.0.118", features = ["derive"] }
